# iri2016

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  AltitudeProfile.py  CMakeLists.txt  LICENSE.md  LICENSE.txt  LatitudeProfile.py  MANIFEST.in  README.md  README.rst  README_matlab.md  TestAll.m  TimeProfile.py  azure-pipelines.yml  buildfile.m  iri2016.m  meson.build  pyproject.toml  setup.cfg  setup.py  test_all.py
+iri2016/: TestLint.m  TestUnit.m  cmake.m  iri2016.m  plotiono.m  plottime.m  test_build.m  test_unit.m
+iri2016/archive/: BatchIRI2016.m  plotpyiono.m
+iri2016/private/: checkcode_recursive.m  cmake.m
.archive/: .appveyor.yml  .travis.yml  iri2016.m  iri2016prof2D.py  legacy.py
.github/workflows/: ci.yml
Examples/: AltitudeProfile.m  Plasma Variables.ipynb  TimeProfile.m
archive/: azure-pipelines.yml
cmake/: compilers.cmake
examples/: TimeProfile.py  example01.py  example02.py  iri1DExample01.py  iri1DExample01b.py  iri1DExample02.py  iri1DExample08.py  iri_heightprofile.py  iri_heightprofile_species.py  iri_timeprofile.py
examples/scripts/: iri2DExample01.py  iri2DExample02.py
fortran/: CMakeLists.txt  igrf.for  irifun.for  irisub.for  iritest.for  test.f90
iri2016/: CMakeLists.txt  __init__.py  base.py  build.py  iri2016prof2D.py  legacy.py  meson.build  plots.py  profile.py
iri2016/src/: CMakeLists.txt  iri2016_driver.f90  irifun.for  irisub.for  iritec.for  meson.build  test.f90
iri2016/src/reference/: iriweb.for
matlab/: BatchIRI2016.m  RunIRI2016.m  TimeProfile.m  build.m  cmake.m  datetimerange.m  iri2016.m  is_file.m  is_folder.m  isoctave.m  meson.m  plotiono.m  plotpyiono.m  plottime.m  pyexe.m  runcmd.m  setup_cmake.m  setup_iri2016.m  setup_meson.m  xarray2mat.m  xarrayind2vector.m
matlab/archive/: iri2016.m  iri_2016.m
pyiri2016/: __init__.py  iri2016.py  iri2016prof.py  iri2016prof2D.py  plots.py
scripts/: iri2016prof2D.py  iri2DExample01.py  iri2DExample02.py
source/: CMakeLists.txt  igrf.for  iridreg.for  iriflip.for  irifun.for  irisub.for  irisubg.for  iritec.for  iritest.for  iriwebg.for  iriwebg.pyf
source/reference/: irisubg.pyf
src/: CMakeLists.txt  igrf.for  iri2016_driver.F90  iri2016_driver.f90  iridreg.for  iriflip.for  irifun.for  irisub.for  iritec.for  meson.build  test.f90
src/iri2016/: CMakeLists.txt  __init__.py  __main__.py  altitude.py  base.py  build.py  latitude.py  meson.build  plots.py  profile.py  setup.cmake  time.py
src/iri2016/src/: CMakeLists.txt  igrf.for  iri2016_driver.f90  iri_driver.f90  iriflip.for  irifun.for  irisub.for
src/iri2016/src/reference/: iritest.for
src/iri2016/tests/: test_mod.py  test_scripts.py
src/reference/: iriwebg.for
tests/: test.py  test_all.py  test_build.py  test_compilers.sh  test_iri2016.m  test_matlab.py  test_mod.py  test_scripts.py
