[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "iri2016"
version = "1.12.0"
description = "IRI2016 International Reference Ionosphere from Python"
keywords = ["thermosphere", "ionosphere"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Programming Language :: Fortran",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["readme"]
requires-python = ">=3.9"
dependencies = ["numpy", "xarray", "python-dateutil"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy", "types-python-dateutil"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 99

[tool.mypy]
files = ["src"]
allow_redefinition = true
show_error_context = false
show_column_numbers = true
ignore_missing_imports = true
