[metadata]
name = iri2016
version = 1.8.1
author = Michael Hirsch, Ph.D.; Ronald Ilma
author_email = scivision@users.noreply.github.com
description = IRI2016 International Reference Ionosphere from Python
url = https://github.com/space-physics/iri2016
keywords =
  thermosphere
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy >= 1.10
  xarray

[options.extras_require]
tests =
  pytest
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
  scipy
  timeutil
  pyigrf12
  cartopy
  pyapex
