[metadata]
name = iri2016
version = 1.11.1
author = Michael Hirsch, Ph.D.; Ronald Ilma
author_email = scivision@users.noreply.github.com
description = IRI2016 International Reference Ionosphere from Python
url = https://github.com/space-physics/iri2016
keywords =
  thermosphere
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
zip_safe = False
install_requires =
  python-dateutil
  numpy >= 1.10
  xarray
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
  types-python-dateutil
plot =
  matplotlib
  seaborn
  scipy
  timeutil
  pyigrf12
  cartopy
  pyapex
